# blog

./: .editorconfig  .env  .env.sample  .gitattributes  .gitignore  CLAUDE.md  Gemfile  LICENSE.md  README.md  astro.config.mjs  config.toml  config.yaml  dev.bat  dev.sh  docker.sh  docusaurus.config.ts  lychee.toml  mdx-components.ts  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  run-server.sh  run.sh  setup-pyenv.sh  skip_file.txt  tsconfig.json  vercel.json  vscode.code-workspace
.claude/: settings.local.json
assets/: main.scss
blog/: authors.yml
content/: _index.md  hello.md  site-info.md
docker/: Dockerfile
docs/: index.mdx
layouts/: index.html
libraries/: blog.mbedded.ninja.afpalette  electronic-components.afassets  electronic-components.afdesign  electronic-components.afdesign~lock~  electronic-components.odg  equations.docx  kicad-symbols.dcm  kicad-symbols.lib  mbedded-ninja-kicad-symbols.bck  mbedded-ninja-kicad-symbols.dcm  mbedded-ninja-kicad-symbols.lib
old/: 2011-09-08-hefeweizen-brewing-notes-added.md  page_single.html
requirements/: requirements.txt
scripts/: 2024-02-01-convert-link-shortcode-to-md.py  2024-02-21-convert-link-shortcode-to-md.py  2024-02-22-all-asides-to-use-aside-shortcode.py  2024-02-22-migrate-to-hugo-math.py  2024-07-05-hugo-markdown-to-docusaurus-mdx.py  2024-07-08-rename-to-index-mdx.py  2024-08-31-update-frontmatter.py  2024-09-02-add-updates-type.py  asciidoc-to-markdown.py  count-content.py  docusaurus-to-astro.py  fix-etc.ps1  fix_component_package_links.py  link-checker.js  (+15 more)
(+10300 files in other folders)
