[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "bleak==0.22.2",
    "flake8==7.0.0",
    "matplotlib==3.8.3",
    "numpy==1.26.4",
    "pandas==2.2.0",
    "python-frontmatter==1.1.0",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "scipy==1.15.2",
]
